TMS-1225: Accessibility fixes for color contrasts

--- a/assets/styles/overrides/_breadcrumb.scss
+++ b/assets/styles/overrides/_breadcrumb.scss
@@ -5,7 +5,7 @@
     }
 
     .breadcrumbs__nav a {
-        color: $primary;
+        color: $color-black;
     }
 
     a {
